fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,9 +10,13 @@
     }
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
     }
     .contact-info {
         line-height: 2;
+    }
+    .contact-submit-btn {
+        font-size: 16px;
     }
     #nav .subnav a {
         padding: 5px 12px;
