--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,8 @@ html {
     margin-top: 15px;
     border: none;
     cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
